Proper HTML, some better styling... But a fix is needed for the overlapping images.

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -80,6 +80,14 @@ footer {
   clear: both;
 }
 
+figure {
+  figcaption {
+    background: #efefef;
+    padding: 5px;
+    margin: -7px 0 0;
+  }
+}
+
 .alignright {
   float: right;
   margin: 5px 0 20px 20px;
